[MODINVOICE-537] Replaced Collectors.toList